--- a/cliente/src/assets/components/Sidebar/Sidebar.css
+++ b/cliente/src/assets/components/Sidebar/Sidebar.css
@@ -192,7 +192,7 @@
 
 /* Botón de Cerrar Sesión */
 .sidebar-footer {
-  margin-top: auto;
+  margin-top: -1rem;
   padding-top: 1.5rem;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
